SERVER-78360 resharding building index phase should wait in progress index build finish